chore: rename from myapp to DeadTood and comment remove ONBOARDING_KEY when log out

--- a/app.json
+++ b/app.json
@@ -1,58 +1,58 @@
 {
-  "expo": {
-    "name": "myapp",
-    "slug": "myapp",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.myapp"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.myapp",
-      "googleServicesFile": "./google-services.json"
-    },
-    "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/mascot/happy.png",
-          "imageWidth": 280,
-          "resizeMode": "contain",
-          "backgroundColor": "#4A90D9",
-          "dark": {
-            "backgroundColor": "#2E5A8B",
-            "image": "./assets/images/mascot/happy.png"
-          }
-        }
-      ]
-    ],
-    "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
-    },
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "1584120b-ea97-4c35-857f-91836bd7e8b2"
-      }
-    },
-    "owner": "quangtran013"
-  }
+    "expo": {
+        "name": "DeadTood",
+        "slug": "DeadTood",
+        "orientation": "portrait",
+        "icon": "./assets/images/icon.png",
+        "scheme": "DeadTood",
+        "userInterfaceStyle": "automatic",
+        "newArchEnabled": true,
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "com.anonymous.DeadTood"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "backgroundColor": "#E6F4FE",
+                "foregroundImage": "./assets/images/android-icon-foreground.png",
+                "backgroundImage": "./assets/images/android-icon-background.png",
+                "monochromeImage": "./assets/images/android-icon-monochrome.png"
+            },
+            "edgeToEdgeEnabled": true,
+            "predictiveBackGestureEnabled": false,
+            "package": "com.anonymous.DeadTood",
+            "googleServicesFile": "./google-services.json"
+        },
+        "web": {
+            "output": "static",
+            "favicon": "./assets/images/favicon.png"
+        },
+        "plugins": [
+            "expo-router",
+            [
+                "expo-splash-screen",
+                {
+                    "image": "./assets/images/mascot/happy.png",
+                    "imageWidth": 280,
+                    "resizeMode": "contain",
+                    "backgroundColor": "#4A90D9",
+                    "dark": {
+                        "backgroundColor": "#2E5A8B",
+                        "image": "./assets/images/mascot/happy.png"
+                    }
+                }
+            ]
+        ],
+        "experiments": {
+            "typedRoutes": true,
+            "reactCompiler": true
+        },
+        "extra": {
+            "router": {},
+            "eas": {
+                "projectId": "1584120b-ea97-4c35-857f-91836bd7e8b2"
+            }
+        },
+        "owner": "quangtran013"
+    }
 }
